--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-preset-es2015": "^6.22.0",
     "extract-zip": "^1.6.0",
     "fs-extra": "^2.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-banner": "^0.1.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
@@ -16,12 +16,15 @@
     "gulp-uglifycss": "^1.0.6",
     "inly": "^1.0.2",
     "webpack-clear-console": "^1.0.3",
-    "webpack-stream": "^3.2.0"
+    "webpack-stream": "^4.0.0",
+    "snyk": "^1.82.0"
   },
   "scripts": {
     "gulp": "./node_modules/.bin/gulp",
     "install": "npm run gulp make",
-    "deploy": "npm run gulp make && ./etc/scripts/deploy.sh"
+    "deploy": "npm run gulp make && ./etc/scripts/deploy.sh",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "repository": {
     "type": "git",
@@ -29,5 +32,6 @@
   },
   "author": "Laura Mayhem",
   "license": "IT MINE",
-  "homepage": "https://bitbucket.org/walaura/lauragonzalez.cc#readme"
+  "homepage": "https://bitbucket.org/walaura/lauragonzalez.cc#readme",
+  "snyk": true
 }
